--- a/src/handlebars.scss
+++ b/src/handlebars.scss
@@ -3,7 +3,7 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  flex-basis: calc(100% / 3);
+  flex-basis: 226px;
   padding: 20px;
   margin: 10px 20px;
   height: 360px;
